tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@syntax__content_in_children_at_top_level1.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/syntax/content_in_children_at_top_level1.txt
---
error: This content would be ignored: only `extends`, `block` and `component` are allowed at the top level of a child template.
 --> child:2:1
  |
2 | {{hey}}
  | ^^^^^^^
